[package]
name = "sharks-wasm"
version = "0.1.0"
authors = ["Aitor Ruano <codearm@pm.me>"]
description = "WebAssembly bindings for [Sharks](https://crates.io/crates/sharks)"
homepage = "https://github.com/c0dearm/sharks-wasm"
repository = "https://github.com/c0dearm/sharks-wasm"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sharks = "0.3"
serde = "1.0"
serde_derive = "1.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
